--- a/13.md
+++ b/13.md
@@ -48,7 +48,7 @@ print(user.__name)
 
 А вызов нашего метода позволит прочитать это свойство:
 ```py
-print(user.show())  // выведет 'john'
+print(user.show())  # выведет 'john'
 ```
 
 ## Задание
