--- a/20.md
+++ b/20.md
@@ -1,119 +1,93 @@
-Сравнение объектов в ООП в Python
+# Сравнение объектов в ООП в Python
 
 Давайте посмотрим, как сравниваются переменные, содержащие объекты. Два переменные будут считаться равными, если они содержат ссылку на один и тот же объект. Посмотрим на практике. Пусть у нас есть следующий класс:
+```py
 class User:
-	constructor(name):
-		self.name = name 
-	
+  __name = None
 
+  def __init__(self,name,surname):
+    self.__name = name 
+```
 
 Создадим два объекта этого класса:
+```py
 user1 = User('1') 
 user2 = User('2') 
+```
 
 Сравним переменные, содержащие ссылку на один и тот же объект:
-print(user1 ===user1)  // true
+
+```py
+print(user1 == user1)  # True
+```
 
 А теперь сравним переменные, содержащие ссылку на разные объекты:
-print(user1 ===user2)  // false
+```py
+print(user1 == user2)  # False
+```
 
 ## Задание
-
-1. jsOpBsOC
-
-Расскажите, каким будет результат сравнения в следующем коде:
+```py
 class Employee:
-	constructor(name):
-		self.name = name 
-	
+  __name = None
 
+  def __init__(self,name,surname):
+    self.__name = name 
+```   
 
- emp1 = Employee('john') 
- emp2 = Employee('eric') 
+1. Расскажите, каким будет результат сравнения в следующем коде:
+```py
+emp1 = Employee('john') 
+emp2 = Employee('eric') 
 
-print(emp1 === emp2) 
+print(emp1 == emp2) 
+```
 
-2. jsOpBsOC
+2.Расскажите, каким будет результат сравнения в следующем коде:
+```py
+emp1 = Employee('john') 
+emp2 = Employee('eric') 
 
-Расскажите, каким будет результат сравнения в следующем коде:
-class Employee:
-	constructor(name):
-		self.name = name 
-	
+print(emp1 == emp1) 
+```
 
+2.Расскажите, каким будет результат сравнения в следующем коде:
+```py
+emp1 = Employee('john') 
+emp2 = Employee('john') 
 
- emp1 = Employee('john') 
- emp2 = Employee('eric') 
+print(emp1 == emp2) 
+```
 
-print(emp1 === emp1) 
+3. Расскажите, каким будет результат сравнения в следующем коде:
+```py
+emp1 = Employee('john') 
+emp2 = Employee('eric') 
 
-3. jsOpBsOC
+print(emp1 != emp1) 
+```
 
-Расскажите, каким будет результат сравнения в следующем коде:
-class Employee:
-	constructor(name):
-		self.name = name 
-	
+3. Расскажите, каким будет результат сравнения в следующем коде:
+```py
+emp1 = Employee('john') 
+emp2 = emp1 
 
+print(emp1 == emp2) 
+```
 
- emp1 = Employee('john') 
- emp2 = Employee('john') 
-
-print(emp1 === emp2) 
-
-4. jsOpBsOC
-
-Расскажите, каким будет результат сравнения в следующем коде:
-class Employee:
-	constructor(name):
-		self.name = name 
-	
-
-
- emp1 = Employee('john') 
- emp2 = Employee('eric') 
-
-print(emp1 !== emp1) 
-
-5. jsOpBsOC
-
-Расскажите, каким будет результат сравнения в следующем коде:
-class Employee:
-	constructor(name):
-		self.name = name 
-	
-
-
- emp1 = Employee('john') 
- emp2 = emp1 
-
-print(emp1 === emp2) 
-
-6. jsOpBsOC
-
-Расскажите, каким будет результат сравнения в следующем коде:
-class Employee:
-	constructor(name):
-		self.name = name 
-	
-
-
- emp1 = Employee('john') 
- emp2 = Employee('eric') 
+4. Расскажите, каким будет результат сравнения в следующем коде:
+```py
+emp1 = Employee('john') 
+emp2 = Employee('eric') 
 
 print(emp1 !== emp2) 
+```
 
-7. jsOpBsOC
-
-Расскажите, каким будет результат сравнения в следующем коде:
-class Employee:
-	constructor(name):
-		self.name = name 
-	
-
-
- emp1 = Employee('john') 
- emp2 = emp1 
+1. Расскажите, каким будет результат сравнения в следующем коде:
+```py
+emp1 = Employee('john') 
+emp2 = emp1 
 emp2.name = 'eric' 
 
-print(emp1 === emp2) 
+print(emp1 == emp2) 
+```
