--- a/29.md
+++ b/29.md
@@ -1,32 +1,38 @@
-Наследование публичных методов в ООП в Python
+#Наследование публичных методов в ООП в Python
 
 Класс-потомок наследует все публичные методы родителей. Давайте посмотрим на примере. Пусть у нас есть класс со следующими методами:
+```py
 class User:
-	setName(name):
-		self.name = name 
-	
-	getName():
-		return self.name 
-	
+  def setName(self,name):
+    self.name = name 
 
+  def getName(self):
+    return self.name 
+```
 
 Пусть от этого класса наследует следующий класс:
-class Student extends User:
-	
+```py
+class Student(User):
+  pass
+```
 
 
 Давайте проверим, что методы унаследовались. Создадим новый объект со студентом:
- student = Student 
+```py
+student = Student()
+```
 
 Установим ему имя с помощью унаследованного метода:
-student.setName('john') 
+```py
+student.setName('john')
+```
 
 Прочитаем его имя с помощью унаследованного метода:
- name = student.getName() 
+```py
+name = student.getName() 
 print(name) 
+```
 
 ## Задание
 
-1. jsOpIhPbM
-
-Проверьте, что ваш класс Employee наследует методы от класса User.
+1. Проверьте, что ваш класс Employee наследует методы от класса User.
