--- a/30.md
+++ b/30.md
@@ -1,34 +1,36 @@
-Методы потомка в ООП в Python
+# Методы потомка в ООП в Python
 
 Класс-потомок может иметь свои методы. Для примера добавим нашему студенту геттер и сеттер года обучения:
-class Student extends User:
-	setYear(year):
-		self.year = year 
+```
+class Student(User):
+  def setYear(self,year):
+    self.year = year 
 	
-	getYear():
-		return self.year 
+  def getYear(self):
+    return self.year 
+```    
 	
-
+> Обратите внимание, что здесь у нас в начале класса переменная не создаётся `year`. Так тоже можно делать, всё такие python у нас динамический язык. Но в дальнейшем, что бы контролировать вессь процесс, лучше их создавать отдельно в теле класса, а не когда к ним обратимся.
 
 В классе-потомке будут доступны как его личные методы, так и унаследованные. Давайте проверим. Создадим объект класса:
- student = Student 
+```py
+student = Student()
+```
 
 Установим ему имя с помощью унаследованного метода, а год обучения с помощью собственного метода:
-student.setName('john') 
+```py
 student.setYear(1) 
+```
 
 Прочитаем его имя и год обучения:
- name = student.getName() 
- year = student.getYear() 
-
+```py
+year = student.getYear() 
 print(name, year) 
+```
 
 ## Задание
 
-1. jsOpIhOChM
-
-В классе Employee сделайте геттер и сеттер зарплаты.
-
-2. jsOpIhOChM
-
-Проверьте, что в классе Employee работают как его родные методы, так и унаследованные.
+1. В классе Employee сделайте геттер и сеттер зарплаты.
+2. В классе Employee сделайте геттер и сеттер имени.
+3. В классе Employee сделайте геттер и сеттер фамилии.
+4. Проверьте, что в классе Employee работают как его родные методы, так и унаследованные.
