--- a/33.md
+++ b/33.md
@@ -1,81 +1,80 @@
 
-jsOpIhCn33 of 60menu
-
-Конструктор при наследовании в ООП в Python
+# Конструктор при наследовании в ООП в Python
 
 При наследовании можно переопределять конструктор родителя. Давайте посмотрим на примере. Пусть у нас есть следующий класс родителя:
+```py
 class User:
-	constructor(name, surname):
+	def __init__(self,name, surname):
 		self.name = name 
 		self.surname = surname 
 	
-	
-	getName():
+	def getName(self):
 		return self.name 
 	
-	getSurn():
+	def getSurn(self):
 		return self.surname 
-	
-
+```
 
 Пусть от родительского класса наследует следующий класс:
-class Student extends User:
-	
+```py
+class Student(User):
+  pass
+```
 
+> Если мы создаим экземпляр без атрибутов, мы получим следующее:
+> **TypeError: User.__init__() missing 2 required positional arguments: 'name' and 'surname'**
+> Нам требуется 2 агрумента
 
 Пусть мы хотим в классе-потомке расширить конструктор, добавив в него дополнительные параметры:
-class Student extends User:
-	constructor(name, surname, year):
-		
-	
-
+```py
+class Student(User):
+	def __init__(self,name, surname, year):
+    pass
+```  
 
 В этом случае нам обязательно нужно первой строкой вызвать конструктор родителя через super:
-class Student extends User:
-	constructor(name, surname, year):
-		super() 
-	
-
+```py
+class Student(User):
+	def __init__(self,name, surname, year):
+		super()
+```
 
 Команда super по сути является конструктором родителя. Поэтому передадим в него требуемые параметры:
-class Student extends User:
-	constructor(name, surname, year):
-		super(name, surname) 
-	
-
+```py
+class Student(User):
+	def __init__(self,name, surname, year):
+		super().__init__(name,surname)
+```    
+> Теперь если мы создаим экземпляр без атрибутов, но уже с переопределённым конструктором мы получим следующее:
+> **TypeError: Student.__init__() missing 3 required positional arguments: 'name', 'surname', and 'year'**
+> Нам требуется уже 3 агрумента
 
 Теперь в потомке год обучения запишем в свое свойство потомка:
-class Student extends User:
-	constructor(name, surname, year):
+```py
+class Student(User):
+	def __init__(self,name, surname, year):
 		super(name, surname) 
 		self.year = year 
-	
-
+```	
 
 Сделаем геттер для года обучения:
-class Student extends User:
-	constructor(name, surname, year):
+```py
+class Student(User):
+	def __init__(self,name, surname, year):
 		super(name, surname) 
 		self.year = year 
 	
-	
-	getYear():
+	def getYear(self):
 		return self.year 
-	
+```	
 
 
 ## Задание
 
-1. jsOpIhCn
+1. Пусть класс Employee наследует от класса User из данного урока.
 
-Пусть класс Employee наследует от класса User из данного урока.
+2. Переопределите в класс Employee конструктор родителя, добавив в него параметр с возрастом и зарплатой.
 
-2. jsOpIhCn
-
-Переопределите в класс Employee конструктор родителя, добавив в него параметр с возрастом и зарплатой.
-
-3. jsOpIhCn
-
-Сделайте геттеры для возраста и зарплаты.
+3. Сделайте геттеры для возраста и зарплаты.
 
 
