--- a/35.md
+++ b/35.md
@@ -1,71 +1,72 @@
 
-jsOpIhPrP35 of 60menu
-
-Приватные свойства при наследовании в ООП в Python
+# Приватные свойства при наследовании в ООП в Python
 
 Приватные свойства не наследуются. Но потомок может манипулировать ими через публичные методы родителя. Давайте посмотрим на практике. Пусть у нас есть следующий класс-родитель с приватным свойством и его геттером и сеттом:
+```py
 class User:
-	#name 
+	__name  = None
 	
-	setName(name):
-		self.#name = name 
+	def setName(self,name):
+		self.__name = name 
 	
-	getName():
-		return self.#name 
-	
-
+	def getName(self):
+		return self.__name 
+```
 
 Пусть от родителя наследует следующий потомок:
-class Student extends User:
-	
-
+```py
+class Student(User):
+  pass
+```
 
 Создадим объект потомка:
- student = Student 
+```py
+student = Student()
+```
 
 Воспользуемся методом родителя, чтобы записать его приватное свойство:
+```py
 student.setName('john') 
+```
 
 Воспользуемся методом родителя, чтобы прочитать его приватное свойство:
- name = student.getName() 
+```py
+name = student.getName() 
 print(name) 
+```
 
 ## Задание
 
-1. jsOpIhPrP
-
-Дан следующий класс-родитель:
+1. Дан следующий класс-родитель:
+```py
 class User:
-	#name 
-	#surname 
+	__name = None
+	__surname = None
 	
-	setName(name):
-		self.#name = name 
+	def setName(self,name):
+		self.__name = name 
 	
-	getName():
-		return self.#name 
+	def getName(self):
+		return self.__name 
 	
+	def setSurn(surname):
+		self.__surname = surname 
 	
-	setSurn(surname):
-		self.#surname = surname 
-	
-	getSurn():
-		return self.#surname 
-	
+	def getSurn(self):
+		return self.__surname 
+```
 
 
 Сделайте класс Employee, который будет наследовать от этого родителя.
 
-2. jsOpIhPrP
+1. Создайте объект класса Employee и вызовите унаследованные сеттеры и геттеры.
 
-Создайте объект класса Employee и вызовите унаследованные сеттеры и геттеры.
-
-3. jsOpIhPrP
-
-В классе Employee сделайте следующий метод:
-getFull():
-	return self.#name + ' ' + self.#surname 
-
+2. В классе Employee сделайте следующий метод:
+```py
+  ...
+  def getFull(self):
+	return self.__name + ' ' + self.__surname 
+```
 
 Убедитесь, что код метода приведет к ошибке.
 
