--- a/36.md
+++ b/36.md
@@ -1,76 +1,63 @@
 
-jsOpIhPPP36 of 60menu
-
-Проблема приватных свойств при наследовании в ООП в Python
+# Проблема приватных свойств при наследовании в ООП в Python
 
 То, что приватные свойства не наследуются, может привести к неожиданной проблеме. Давайте посмотрим на примере. Пусть у нас есть следующий класс-родитель с приватным свойством:
+```py
 class User:
-	#age 
+	__age = 0
 	
-	setAge(age):
-		self.#age = age 
+	def setAge(self,age):
+		self.__age = age 
 	
-	getAge():
-		return self.#age 
-	
-
+	def getAge(self):
+		return self.__age 
+```	
 
 Пусть в классе-потомке мы решили сделать метод, который будет увеличивать возраст на единицу. Однако, попытка изменить приватное свойство родителя приведет к ошибке:
-class Student extends User:
-	incAge():
-		self.#age++  // ошибка
-	
+```py
+class Student(User):
+  def defincAge(self):
+    self.__age=self.__age+1  # ошибка   
+```	
 
 
-Ошибка исчезнет, если в классе-потомке объявить приватное свойство #age:
-class Student extends User:
-	#age 
-	
-	incAge():
-		self.#age++ 
-	
-
+Ошибка исчезнет, если в классе-потомке объявить приватное 
+```py
+class Student(User):
+  __age = 0
+  def defincAge(self):
+    self.__age=self.__age+1  # ошибка   
+```	
 
 Тут-то нас и поджидает ловушка! На самом деле мы породили два приватных свойства: одно в родителе и одно в потомке. И они работают полностью независимо. Это значит, что методы родителя будут изменять свое свойство, а методы потомка - свои.
 
 Эта проблема на самом деле имеет решение. Просто нужно манипулировать приватными свойствами родителя через методы этого родителя. Давайте перепишем наш код в соответствии с этим:
-class Student extends User:
-	incAge():
-		 age = self.getAge() 
-		age++ 
-		self.setAge(age) 
-	
+```py
+class Student(User):
+  __age = 0
+  def __init__(self):
+    __age = self.getAge() 
 
+  def defincAge(self):
+    self.__age=self.__age+1  
 
-Можно упростить:
-class Student extends User:
-	incAge():
-		self.setAge(++self.getAge()) 
-	
-
+```    
 
 ## Задание
 
-1. jsOpIhPPP
-
-В следущем коде в классе потомка переопределяется метод родителя. Исправьте проблемы в этом коде:
+1. В следущем коде в классе потомка переопределяется метод родителя. Исправьте проблемы в этом коде:
+```py
 class User:
-	#name 
+	__name = ''
 	
-	setName(name):
-		self.#name = name 
+	def setName(self,name):
+		self.__name = name 
 	
-	getName():
-		return self.#name 
+	def getName(self):
+		return self.__name 
 	
-
-
-class Employee extends User:
-	setName(name):
-		if (name.length > 0):
-			self.#name = name 
-		
-	
-
-
-
+class Employee(User):
+	setName(self,name):
+		if (len(name) > 0):
+			self.__name = name 
+```
