--- a/38.md
+++ b/38.md
@@ -8,14 +8,14 @@ class User:
 	setAge(age):
 		self._age = age 
 	
-	getAge():
+	getAge(self):
 		return self._age 
 	
 
 
 В классе потомке сделаем метод, увеличивающий возраст на единицу:
-class Student extends User:
-	incAge():
+class Student(User:
+	incAge(self):
 		self._age++ 
 	
 
@@ -28,16 +28,16 @@ class Student extends User:
 class User:
 	#name 
 	
-	setName(name):
+	setName(self,name):
 		self.#name = name 
 	
-	getName():
+	getName(self):
 		return self.#name 
 	
 
 
-class Employee extends User:
-	setName(name):
+class Employee(User:
+	setName(self,name):
 		if (name.length > 0):
 			self.#name = name 
 		
