--- a/39.md
+++ b/39.md
@@ -5,30 +5,30 @@ jsOpIhHr39 of 60menu
 
 Можно выполнять наследования от класса, который сам является потомком. Давайте посмотрим на примере. Пусть у нас есть следующий класс-родитель:
 class User:
-	setName(name):
+	setName(self,name):
 		self._name = name 
 	
-	getName():
+	getName(self):
 		return self._name 
 	
 
 
 От этого класса наследует следующий класс:
-class Student extends User:
+class Student(User:
 	setYear(year):
 		self._year = year 
 	
-	getYear():
+	getYear(self):
 		return self._year 
 	
 
 
 А от этого класса наследует еще один класс:
-class StudentProgrammer extends Student:
+class StudentProgrammer(Student:
 	setSkill(skill):
 		self._skill = skill 
 	
-	getSkill():
+	getSkill(self):
 		return self._skill 
 	
 
