--- a/41.md
+++ b/41.md
@@ -7,7 +7,7 @@ jsOpAdCL41 of 60menu
 
 Пусть у нас есть класс User, который содержит имя юзера и массив городов, в которых этот юзер был:
 class User:
-	constructor(name, cities):
+	def __init__(self,name, cities):
 		self.name = name 
 		self.cities = cities 
 	
@@ -15,12 +15,12 @@ class User:
 
 Пусть есть метод, который выводит города:
 class User:
-	constructor(name, cities):
+	def __init__(self,name, cities):
 		self.name = name 
 		self.cities = cities 
 	
 	
-	showCities():
+	showCities(self):
 		self.cities.forEach(function(city):
 			print(city) 
 		) 
@@ -29,14 +29,14 @@ class User:
 
 Пусть в этом методе мы решили использовать некоторый вспомогательный метод класса. В этом случае контекст и потеряется:
 class User:
-	constructor(name, cities):
+	def __init__(self,name, cities):
 		self.name = name 
 		self.cities = cities 
 	
 	
-	showCities():
+	showCities(self):
 		self.cities.forEach(function(city):
-			print(self.#cape(city))  // контекст потерялся
+			print(self.#cape(city))  # контекст потерялся
 		) 
 	
 	
@@ -47,12 +47,12 @@ class User:
 
 Можно исправить проблему, например, введя стрелочную функцию:
 class User:
-	constructor(name, cities):
+	def __init__(self,name, cities):
 		self.name = name 
 		self.cities = cities 
 	
 	
-	showCities():
+	showCities(self):
 		self.cities.forEach(city =>:
 			print(self.#cape(city)) 
 		) 
@@ -69,13 +69,13 @@ class User:
 
 Исправьте ошибку, допущенную в следующем коде:
 class Employee:
-	constructor(name, salary, coeffs):
+	def __init__(self,name, salary, coeffs):
 		self.name = name 
 		self.salary = salary 
 		self.coeffs = coeffs 
 	
 	
-	getTotal():
+	getTotal(self):
 		return self.coeffs.reduce(function(res, coeff):
 			return res + self.salary * coeff 
 		, 0) 
