--- a/42.md
+++ b/42.md
@@ -7,10 +7,10 @@ jsOpAdMC42 of 60menu
 class User:
 	#name 
 	
-	constructor(name):
+	def __init__(self,self,name):
 		self.#name = name 
 	
-	getName():
+	getName(self):
 		return self.#name 
 	
 
