--- a/43.md
+++ b/43.md
@@ -7,10 +7,10 @@ jsOpAdMCL43 of 60menu
 class User:
 	#name 
 	
-	constructor(name):
+	def __init__(self,self,name):
 		self.#name = name 
 	
-	getName():
+	getName(self):
 		return self.#name 
 	
 
@@ -22,10 +22,10 @@ user = User('john')
  func =user.getName 
 
 В момент записи метода в переменную контекст и потерялся. Теперь self внутри кода метода не будет указывать на объект класса. Проверим, вызовем нашу функцию:
-print(func())  // ошибка
+print(func())  # ошибка
 
 Для решения проблемы можно привязать контекст к функции, например, через bind:
 func = func.bind(user) 
-print(func())  // работает
+print(func())  # работает
 
 
