--- a/44.md
+++ b/44.md
@@ -5,7 +5,7 @@ jsOpAdNC44 of 60menu
 
 Имена свойств и методов не должны совпадать, это вызовет конфликт. Давайте посмотрим на примере. Пусть у нас есть следующий класс:
 class User:
-	name():
+	name(self):
 		print('method') 
 	
 
@@ -14,11 +14,11 @@ class User:
 user = User 
 
 Вызовем его метод, пока все будет работать:
-user.name()  // работает
+user.name()  # работает
 
 А теперь запишем данные в одноименное свойство, затерев тем самым код метода:
 user.name = 'str' 
-user.name()  // ошибка
+user.name()  # ошибка
 
 Для избежания подобных конфликтов всегда давайте методам имена-глаголы, а свойствам - имена-существительные.
 
@@ -28,10 +28,10 @@ user.name()  // ошибка
 
 Исправьте ошибку, допущенную в следующем в коде:
 class Employee:
-	constructor(salary):
+	def __init__(self,salary):
 		self.salary = salary 
 	
-	salary():
+	salary(self):
 		return self.salary + '$' 
 	
 
