--- a/46.md
+++ b/46.md
@@ -7,10 +7,10 @@ jsOpAdCM46 of 60menu
 export default class User:
 	#name 
 	
-	constructor(name):
+	def __init__(self,self,name):
 		self.#name = name 
 	
-	getName():
+	getName(self):
 		return self.#name 
 	
 
