--- a/47.md
+++ b/47.md
@@ -9,14 +9,14 @@ export default class User:
 
 
 Пусть от этого класса мы будем наследовать другой класс:
-export default class Student extends User:
+export default class Student(User:
 	
 
 
 В этом случае к классу-потомку нужно подключить класс-родитель:
 import User from './User.js' 
 
-export default class Student extends User:
+export default class Student(User:
 	
 
 
