--- a/48.md
+++ b/48.md
@@ -11,10 +11,10 @@ jsOpAdPT48 of 60menu
 
 Свойства-аксессоры создаются с помощью ключевых слов get и set написанных при объявлении методов:
 class User:
-	get name():
+	get name(self):
 	
 	
-	set name():
+	set name(self):
 	
 	
 
@@ -31,10 +31,10 @@ user.name = 'john'
 
 Дан следующий класс:
 class Employee:
-	get name():
+	get name(self):
 		print('get') 
 	
-	set name():
+	set name(self):
 		print('set') 
 	
 
