--- a/49.md
+++ b/49.md
@@ -7,7 +7,7 @@ jsOpAdAG49 of 60menu
 class User:
 	#name 
 	
-	constructor(name):
+	def __init__(self,self,name):
 		self.#name = name 
 	
 
@@ -16,11 +16,11 @@ class User:
 class User:
 	#name 
 	
-	constructor(name):
+	def __init__(self,self,name):
 		self.#name = name 
 	
 	
-	get name():
+	get name(self):
 		return self.#name 
 	
 
