--- a/5.md
+++ b/5.md
@@ -14,7 +14,7 @@ user = User()
 ```
 
 А теперь вызовем наш метод:
-print(user.show())  // выведет '+++'
+print(user.show())  # выведет '+++'
 
 1. jsOpBsCM
 
