--- a/50.md
+++ b/50.md
@@ -7,11 +7,11 @@ jsOpAdAS50 of 60menu
 class User:
 	#name 
 	
-	get name():
+	get name(self):
 		return self.#name 
 	
 	
-	set name(name):
+	set name(self,name):
 		self.#name = name 
 	
 
@@ -20,14 +20,14 @@ class User:
 class User:
 	#name 
 	
-	set name(name):
+	set name(self,name):
 		if (name.length > 0):
 			self.#name = name 
 		 else:
-			throw Error('name is incorrect') 
+			raise Exception('name is incorrect') 
 		
 	
-	get name():
+	get name(self):
 		return self.#name 
 	
 
