--- a/51.md
+++ b/51.md
@@ -5,7 +5,7 @@ jsOpAdVPG51 of 60menu
 
 С помощью аксессоров можно создавать мнимые свойства, которых в объекте на самом деле нет. Давайте посмотрим на примере. Пусть у нас есть класс с двумя публичными свойствами:
 class User:
-	constructor(name, surname):
+	def __init__(self,name, surname):
 		self.name = name 
 		self.surname = surname 
 	
@@ -13,12 +13,12 @@ class User:
 
 Давайте сделаем третье свойство, которое будет содержать имя и фамилию. Создадим для этого свойство-аксессор:
 class User:
-	constructor(name, surname):
+	def __init__(self,name, surname):
 		self.name = name 
 		self.surname = surname 
 	
 	
-	get full():
+	get full(self):
 		return self.name + ' ' + self.surname 
 	
 
@@ -27,10 +27,10 @@ class User:
 user = User('john', 'smit') 
 
 Выведем значения публичных свойств:
-print(user.name)  // 'john'
-print(user.surname)  // 'smit'
+print(user.name)  # 'john'
+print(user.surname)  # 'smit'
 
 А теперь выведем значение нашего мнимого свойства:
-print(user.full)  // 'john smit'
+print(user.full)  # 'john smit'
 
 
