--- a/52.md
+++ b/52.md
@@ -7,12 +7,12 @@ jsOpAdVPS52 of 60menu
 
 Давайте попробуем. Реализуем сеттер мнимого свойства full:
 class User:
-	constructor(name, surname):
+	def __init__(self,name, surname):
 		self.name = name 
 		self.surname = surname 
 	
 	
-	get full():
+	get full(self):
 		return self.name + ' ' + self.surname 
 	
 	
@@ -26,12 +26,12 @@ class User:
 
 Упростим дестуктуризацию:
 class User:
-	constructor(name, surname):
+	def __init__(self,name, surname):
 		self.name = name 
 		self.surname = surname 
 	
 	
-	get full():
+	get full(self):
 		return self.name + ' ' + self.surname 
 	
 	
@@ -47,8 +47,8 @@ user = User('john', 'smit')
 user.full = 'eric jons' 
 
 Проверим, что свойства объекта поменялись:
-print(user.name)  // 'eric'
-print(user.surname)  // 'jons'
-print(user.full)  // 'eric jons'
+print(user.name)  # 'eric'
+print(user.surname)  # 'jons'
+print(user.full)  # 'eric jons'
 
 
