--- a/60.md
+++ b/60.md
@@ -13,15 +13,15 @@ store.set('key',:a: 1, b: 2, c: 3)
 
 Получим эти данные по ключу:
  res = store.get('key') 
-print(res)  //:a: 1, b: 2, c: 3
+print(res)  #:a: 1, b: 2, c: 3
 
 Получим часть сохраненной структуры, указав несколько ключей через точку:
  res = store.get('key.a') 
-print(res)  // 1
+print(res)  # 1
 
 Получим другую часть по сложному ключу:
  res = store.get('key.b') 
-print(res)  // 2
+print(res)  # 2
 
 ## Задание
 
