--- a/7.md
+++ b/7.md
@@ -31,7 +31,7 @@ user.name = 'john'
 
 Давайте теперь вызовем метод, тем самым выведя на экран значение свойства:
 ```py
-user.show()  // выведет 'john'
+user.show()  # выведет 'john'
 ```
 
 ## Задание
