--- a/21.md
+++ b/21.md
@@ -1,44 +1,48 @@
-Оператор instanceof в ООП в Python
+# Оператор instanceof в ООП в Python
 
 Оператор instanceof позволяет проверить принадлежит ли объект определенному классу. Давайте посмотрим на примере. Пусть у нас есть следующий класс:
+```py
 class User:
-	
-
+	pass
+```
 
 Сделаем объект в этого класса:
-user = User 
+```py
+user = User
 
 Проверим, принадлежит ли объект из переменной нашему классу:
-print(user instanceof User)  // true
+```py
+print(user instanceof User)  # true
+```
 
 ## Задание
 
-1. jsOpBsOI
-
-Определите, каким будет результат выполнения следующего кода:
+1. Определите, каким будет результат выполнения следующего кода:
+```py
 class Student:
+  pass
 	
-
 class Employee:
+  pass
 	
-
-
- employee = Employee 
+employee = Employee 
 print(employee instanceof Employee) 
 print(employee instanceof Student) 
+```
 
-2. jsOpBsOI
-
-Дан следующий код:
+2.Дан следующий код:
+```py
 class Student:
-	constructor(name):
-		self.name = name 
-	
+  name = None
+
+  def __init__(self,name):
+    self.name = name 
 
 class Employee:
-	constructor(name):
-		self.name = name 
-	
+  name = None
+
+  def __init__(self,name):
+    self.name = name 
 
 
 users = [
@@ -50,5 +54,6 @@ users = [
 	 Employee('user6'),
 	 Student('user7'),
 ] 
+```
 
 Переберите циклом массив объектов и выведите в консоль только имена работников. 
