--- a/22.md
+++ b/22.md
@@ -1,69 +1,65 @@
-Класс как набор методов в ООП в Python
+# Класс как набор методов в ООП в Python
 
 Иногда классы используют для группировки методов схожей тематики. В этом случае как правило создается только один объект этого класса и его методы используются много раз в различных ситуациях.
 
 Давайте посмотрим на примере. Сделаем класс, который будет манипулировать массивами чисел:
+```py
 class ArrHelper:
-	
-
+  pass
+```
 
 Каждый метод этого класса параметром будет принимать массив и выполнять над ним заданную операцию. Пусть, к примеру, у нас будут следующие методы:
+```py
 class ArrHelper:
-	getSum(arr):
-		// сумма элементов
-	
-	
-	getAvg(arr):
-		// среднее арифметическое
-	
+  def getSum(self,arr):
+    # сумма элементов
+    pass
+
+  def getAvg(self,arr):
+    #  среднее арифметическое
+    pass
+```
 
 
 Напишем реализацию этих методов:
+```py
 class ArrHelper:
-	getSum(arr):
-		 res = 0 
+  def getSum(self,arr):
+    res = 0 
+    for num in arr:
+      res += num 
 		
-		for ( num of arr):
-			res += num 
-		
-		
-		return res 
-	
-	
-	getAvg(arr):
-		if (arr.length > 0):
-			 sum = self.getSum(arr) 
-			return sum / arr.length 
-		 else:
-			return 0 
-		
-	
+    return res 
 
-
+  def getAvg(self,arr):
+    if (len(arr) > 0):
+      sum = self.getSum(arr) 
+      return sum / len(arr) 
+    else:
+      return 0 
+```
 Давайте посмотрим, как мы будем пользоваться этими методами. Создадим объект нашего класса:
- arrHelper = ArrHelper 
+```py
+arrHelper = ArrHelper()
+```
 
 Найдем с помощью нашего объекта сумму чисел различных массивов:
- sum1 = arrHelper.getSum([1, 2, 3]) 
+```py
+sum1 = arrHelper.getSum([1, 2, 3]) 
 print(sum1) 
 
  sum2 = arrHelper.getSum([3, 4, 5]) 
 print(sum2) 
+```
 
 ## Задание
 
-1. jsOpBsCMS
+1.Сделайте класс Validator, который будет выполнять проверку строк на корректность.
 
-Сделайте класс Validator, который будет выполнять проверку строк на корректность.
+2. Сделайте в вашем классе метод isEmail, проверяющий строку на то, что она корректный email.
 
-2. jsOpBsCMS
+3. Сделайте в вашем классе метод isDomain, проверяющий строку на то, что она корректное имя домена.
 
-Сделайте в вашем классе метод isEmail, проверяющий строку на то, что она корректный email.
+4. Сделайте в вашем классе метод isNumber, проверяющий строку на то, что она содержит только числа.
 
-3. jsOpBsCMS
-
-Сделайте в вашем классе метод isDomain, проверяющий строку на то, что она корректное имя домена.
-
-4. jsOpBsCMS
-
-Сделайте в вашем классе метод isNumber, проверяющий строку на то, что она содержит только числа.
+> Подсказка, вы можете либо разбирать строку методом split, либо регулрными выражениями
