--- a/24.md
+++ b/24.md
@@ -1,35 +1,34 @@
-Массивы объектов в ООП в Python
+# Массивы объектов в ООП в Python
 
 Объекты классов можно хранить в массиве и выполнять с ними различные операции, как с элементами массива. Давайте посмотрим на примере. Пусть у нас есть следующий класс:
-class User:
-	#name 
-	
-	constructor(name):
-		self.#name = name 
-	
-	getName():
-		return self.#name 
-	
+```py
+class User :
+  __name = None
 
+  def __init__(self,name):
+    self.__name = name
+
+  def getName(self):
+    return self.__name
+```
 
 Сделаем массив объектов этого класса:
+```py
 users = [
 	 User('john'),
 	 User('eric'),
 	 User('kyle'),
 ] 
+```
 
 Давайте переберем этот массив циклом и для каждого юзера выведем его имя:
-for (user ofusers):
+```py
+for user in users:
 	print(user.getName()) 
-
+```
 
 ## Задание
 
-1. jsOpBsAOO
+1. Сделайте массив объектов класса класса Employee.
 
-Сделайте массив объектов класса класса Employee.
-
-2. jsOpBsAOO
-
-Перебирите созданный массив циклом и выведите на экран имена и зарплаты каждого работника.
+2. Перебирите созданный массив циклом и выведите на экран имена и зарплаты каждого работника.
