--- a/27.md
+++ b/27.md
@@ -1,62 +1,1 @@
-Встроенные классы DOM Python
-
-DOM элементы также представляют собой объекты встроенных классов. Давайте посмотрим на примере. Пусть у нас есть абзац:
-<p>text</p>
-
-Получим ссылку на него в переменную:
- elem = document.querySelector('p') 
-
-Выведем этот абзац в консоль:
-print(elem) 
-
-А теперь посмотрим список свойств и методов нашего абзаца:
-console.dir(elem) 
-
-Можно определить к какому классу принадлежит наш абзац. Для этого в списке свойств нужно найти особое свойство [[Prototype]]. В нем мы видим, что абзац принадлежит классу HTMLParagraphElement. Проверим это:
-print(elem instanceof HTMLParagraphElement)  // true
-
-## Задание
-
-1. jsOpBsICD
-
-Изучите результат выполнения следующего кода:
-<div>text</div>
- elem = document.querySelector('div') 
-console.dir(elem) 
-
-Определите, какому классу принадлежит данный тег.
-
-2. jsOpBsICD
-
-Изучите результат выполнения следующего кода:
-<input>
- elem = document.querySelector('input') 
-console.dir(elem) 
-
-Определите, какому классу принадлежит данный тег.
-
-3. jsOpBsICD
-
-Изучите результат выполнения следующего кода:
-<div>text</div>
-<div>text</div>
-<div>text</div>
- elems = document.querySelectorAll('div') 
-console.dir(elems) 
-
-Определите, какому классу принадлежит результат.
-
-4. jsOpBsICD
-
-Изучите результат выполнения следующего кода:
-<div>
-	<p>text</p>
-	<p>text</p>
-	<p>text</p>
-</div>
- elem = document.querySelector('div') 
- elems = elem.children 
-
-console.dir(elems) 
-
-Определите, какому классу принадлежит результат. 
+Встроенные классы DOM JavaScript
