--- a/32.md
+++ b/32.md
@@ -1,72 +1,61 @@
 
-jsOpIhCOM32 of 60menu
-
-Вызов переопределенного метода в ООП в Python
+# Вызов переопределенного метода в ООП в Python
 
 При переопределении потомок теряет доступ к переопределенному методу родителю. Однако, получить к нему доступ все равно можно. Это делается с помощью ключевого слова super, которое указывает на родительский класс.
 
 Давайте посмотрим на примере, когда нам может понадобится доступ к родительскому методу. Пусть у нас есть следующий класс-родитель:
+```py
 class User:
-	setName(name):
+	def setName(self,name):
 		self.name = name 
 	
-	getName():
+	def getName(self):
 		return self.name 
-	
-
+```
 
 Пусть мы в классе-потомке переопределили метод родителя:
-class Student extends User:
-	setName(name):
-		if (name.length > 0):
+```py
+class Student(User):
+	def setName(self,name):
+		if (len(name) > 0):
 			self.name = name 
 		 else:
-			throw Error('student name error') 
-		
-	
-
+      raise Exception("student name error")
+```
 
 Можно заметить, что в переопределенном методе при выполнения условия фактически выполняется код родительского метода. Получается не нужное дублирование кода.
 
 Можно от него избавиться, если вызвать метод родителя. Давайте сделаем это:
-class Student extends User:
-	setName(name):
-		if (name.length > 0):
-			super.setName(name)  // метод родителя
+```py
+class Student(User):
+	setName(self,name):
+		if (len(name) > 0):
+			super.setName(name)  # метод родителя
 		 else:
-			throw Error('student name error') 
-		
-	
-
+			raise Exception('student name error') 
+```
 
 ## Задание
 
-1. jsOpIhCOM
-
-Дан следующий код:
+1. Дан следующий код:
+```py
 class User:
-	setAge(age):
+	def setAge(self,age):
 		if (age >= 0):
 			self.age = age 
 		 else:
-			throw Error('need age more 0') 
-		
-	
+			raise Exception('need age more 0') 
 
 class Employee:
-	setAge(age):
+	def setAge(age):
 		if (age <= 120):
 			if (age >= 0):
 				self.age = age 
 			 else:
-				throw Error('need age more 0') 
-			
+				raise Exception('need age more 0') 
 		 else:
-			throw Error('need age less 120') 
-		
-	
-
-
+			raise Exception('need age less 120') 
+```
 В классе Employee исправьте упростите сеттер возраста, использовав оригинальный метод родителя.
 
 
