--- a/34.md
+++ b/34.md
@@ -1,41 +1,43 @@
 
-jsOpIhPrM34 of 60menu
+# Приватные методы при наследовании в ООП в Python
 
-Приватные методы при наследовании в ООП в Python
+Приватные методы не наследуются. Это сделано специально, чтобы не нарушать инкапсуляцию. 
 
-Приватные методы не наследуются. Это сделано специально, чтобы не нарушать инкапсуляцию. Давайте посмотрим на примере. Пусть у нас есть следующий родительский класс с приватным методом:
+> Инкапсуляция — ограничение доступа к составляющим объект компонентам (методам и переменным). Инкапсуляция делает некоторые из компонент доступными только внутри класса.
+
+Давайте посмотрим на примере. Пусть у нас есть следующий родительский класс с приватным методом:
+```py
 class User:
-	setName(name):
+	def setName(self,name):
 		self.name = name 
 	
-	getName():
-		return self.#capeFirst(self.name) 
+	def getName(self):
+		return self.__capeFirst(self.name) 
 	
-	
-	#capeFirst(str):
-		return str[0].toUpperCase() + str.slice(1) 
-	
-
+	def __capeFirst(self,stri):
+		return stri
+```	
 
 Пусть от родительского класса наследует следующий класс:
-class Student extends User:
-	setSurn(surname):
+```py
+class Student(User):
+	def setSurn(self,surname):
 		self.surname = surname 
 	
-	getSurn():
+	def getSurn(self):
 		return self.surname 
-	
-
+```	
 
 Пусть потомок хочет воспользоваться приватным методом родителя. Python это не разрешит и выдаст ошибку:
-class Student extends User:
-	setSurn(surname):
+```py
+class Student(User):
+	def setSurn(self,surname):
 		self.surname = surname 
 	
-	getSurn():
-		return self.#capeFirst(self.surname)  // будет ошибка
-	
-
+	def getSurn(self):
+		return self.__capeFirst(self.surname)  # будет ошибка
+```	
+> **AttributeError: 'Student' object has no attribute '_Student__capeFirst'**
 
 ## Задание
 
