--- a/37.md
+++ b/37.md
@@ -9,10 +9,10 @@ jsOpIhPtM37 of 60menu
 
 Итак, давайте напишем класс-родитель с защищенным методом:
 class User:
-	setName(name):
+	setName(self,name):
 		self.name = name 
 	
-	getName():
+	getName(self):
 		return self._capeFirst(self.name) 
 	
 	
@@ -22,11 +22,11 @@ class User:
 
 
 Воспользуемся этим защищенным методом в классе-потомке:
-class Student extends User:
+class Student(User:
 	setSurn(surname):
 		self.surname = surname 
 	
-	getSurn():
+	getSurn(self):
 		return self._capeFirst(self.surname) 
 	
 
@@ -37,12 +37,12 @@ class Student extends User:
 
 В следующем коде сделайте вспомогательный метод защищенным:
 class User:
-	setName(name):
+	setName(self,name):
 		if (self.notEmpty(name)):
 			self.name = name 
 		
 	
-	getName():
+	getName(self):
 		return self.name 
 	
 	
@@ -50,13 +50,13 @@ class User:
 		return str.length > 0 
 	
 
-class Employee extends User:
+class Employee(User:
 	setSurn(surname):
 		if (self.notEmpty(surname)):
 			self.surname = surname 
 		
 	
-	getSurn():
+	getSurn(self):
 		return self.surname 
 	
 
