--- a/37.md
+++ b/37.md
@@ -1,65 +1,57 @@
+# Защищенные методы в ООП в Python
 
-jsOpIhPtM37 of 60menu
+Приватные методы не наследуются и не видны снаружи класса. Иногда, однако, нужны методы, которые наследуются, но не видны снаружи класса. Такие методы называются защищенными (protected). 
 
-Защищенные методы в ООП в Python
-
-Приватные методы не наследуются и не видны снаружи класса. Иногда, однако, нужны методы, которые наследуются, но не видны снаружи класса. Такие методы называются защищенными (protected). Python, к сожалению, не поддерживает таких методов.
-
-Поэтому я предлагаю ввести некоторое соглашение, позволяющее создавать такие методы. Будем начинать имена таких методов через подчеркивание. Фактически мы используем старое общепринятое соглашение о закрытых методах. Только называем такие методы защищенными в знак того, что они наследуются, но мы не будем использовать их снаружи. Впрочем, именно так они и применяются по древнему соглашению.
+> Это эффективно предотвращает доступ к нему, если только он не находится внутри подкласса. 
 
 Итак, давайте напишем класс-родитель с защищенным методом:
+```py
 class User:
-	setName(self,name):
+	def setName(self,name):
 		self.name = name 
 	
-	getName(self):
+	def getName(self):
 		return self._capeFirst(self.name) 
 	
-	
-	_capeFirst(str):
-		return str[0].toUpperCase() + str.slice(1) 
-	
-
+	def _capeFirst(stri):
+		return stri
+```
 
 Воспользуемся этим защищенным методом в классе-потомке:
-class Student(User:
-	setSurn(surname):
+```py
+class Student(User):
+	def setSurn(self,surname):
 		self.surname = surname 
 	
-	getSurn(self):
+	def getSurn(self):
 		return self._capeFirst(self.surname) 
-	
-
 
 ## Задание
 
 1. jsOpIhPtM
 
 В следующем коде сделайте вспомогательный метод защищенным:
+```py
 class User:
-	setName(self,name):
+	def setName(self,name):
 		if (self.notEmpty(name)):
 			self.name = name 
 		
 	
-	getName(self):
+	def getName(self):
 		return self.name 
 	
 	
-	notEmpty(str):
-		return str.length > 0 
+	def notEmpty(stri):
+		return len(stri) > 0 
 	
 
-class Employee(User:
-	setSurn(surname):
+class Employee(User):
+	def setSurn(self,surname):
 		if (self.notEmpty(surname)):
 			self.surname = surname 
-		
 	
-	getSurn(self):
+	def getSurn(self):
 		return self.surname 
-	
 
-
-
-s
+```    
