--- a/38.md
+++ b/38.md
@@ -1,47 +1,38 @@
-
-jsOpIhPtP38 of 60menu
-
-Защищенные свойства в ООП в Python
+# Защищенные свойства в ООП в Python
 
 Введем также и защищенные свойства. Будем также начинать их имена с подчеркивания. Посмотрим на примере. Сделаем класс-родитель с защищенным свойством, содержащим возраст:
+```py
 class User:
-	setAge(age):
+	def setAge(self,age):
 		self._age = age 
 	
-	getAge(self):
+	def getAge(self):
 		return self._age 
-	
-
+```	
 
 В классе потомке сделаем метод, увеличивающий возраст на единицу:
-class Student(User:
-	incAge(self):
-		self._age++ 
-	
-
+```py
+class Student(User):
+	def incAge(self):
+		self._age = self._age+1
+```	
 
 ## Задание
 
-1. jsOpIhPtP
-
-Перепишите следующий код через защищенное свойство:
+1. Перепишите следующий код через защищенное свойство:
+```py
 class User:
-	#name 
+	_name = None
 	
-	setName(self,name):
-		self.#name = name 
+	def setName(self,name):
+		self._name = name 
 	
-	getName(self):
-		return self.#name 
-	
+	def getName(self):
+		return self._name 
 
 
-class Employee(User:
-	setName(self,name):
-		if (name.length > 0):
-			self.#name = name 
-		
-	
-
-
-
+class Employee(User):
+	def setName(self,name):
+		if (len(name) > 0):
+			self._name = name 
+```      
