--- a/55.md
+++ b/55.md
@@ -1,36 +1,19 @@
-
-jsOpPrTx55 of 60menu
-
 Класс Text в ООП в Python
 
 ## Задание
 
-1. jsOpPrTx
+1. Сделайте класс Text, который будет выполнять некоторые манипуляции над текстом. Пусть текст передается параметром конструктора.
 
-Сделайте класс Text, который будет выполнять некоторые манипуляции над текстом. Пусть текст передается параметром конструктора.
+2. Сделайте метод, который вернет количество символов в тексте.
 
-2. jsOpPrTx
+3. Сделайте метод, который вернет количество букв в тексте.
 
-Сделайте метод, который вернет количество символов в тексте.
+4. Сделайте метод, который вернет количество пробелов в тексте.
 
-3. jsOpPrTx
+5. Сделайте метод, который вернет количество символов в тексте за вычетом пробелов.
 
-Сделайте метод, который вернет количество букв в тексте.
+6. Сделайте метод, который вернет массив слов.
 
-4. jsOpPrTx
-
-Сделайте метод, который вернет количество пробелов в тексте.
-
-5. jsOpPrTx
-
-Сделайте метод, который вернет количество символов в тексте за вычетом пробелов.
-
-6. jsOpPrTx
-
-Сделайте метод, который вернет массив слов.
-
-7. jsOpPrTx
-
-Сделайте метод, который вернет массив предложений.
+7. Сделайте метод, который вернет массив предложений.
 
 
