--- a/56.md
+++ b/56.md
@@ -1,28 +1,15 @@
-
-jsOpPrPr56 of 60menu
-
 Класс Period в ООП в Python
 
 ## Задание
 
-1. jsOpPrPr
+1. Сделайте класс Period, который будет находить разницу между двумя моментами времени. Пусть эти моменты передаются параметрами конструктора.
 
-Сделайте класс Period, который будет находить разницу между двумя моментами времени. Пусть эти моменты передаются параметрами конструктора.
+2. Сделайте метод, который вернет разницу между моментами в секундах.
 
-2. jsOpPrPr
+3. Сделайте метод, который вернет разницу между моментами в минутах.
 
-Сделайте метод, который вернет разницу между моментами в секундах.
+4. Сделайте метод, который вернет разницу между моментами в часах.
 
-3. jsOpPrPr
-
-Сделайте метод, который вернет разницу между моментами в минутах.
-
-4. jsOpPrPr
-
-Сделайте метод, который вернет разницу между моментами в часах.
-
-5. jsOpPrPr
-
-Сделайте метод, который вернет разницу между моментами в днях.
+5. Сделайте метод, который вернет разницу между моментами в днях.
 
 
