--- a/57.md
+++ b/57.md
@@ -1,36 +1,19 @@
-
-jsOpPrZt57 of 60menu
-
 Класс Zate в ООП в Python
 
 ## Задание
 
-1. jsOpPrZt
+1. Сделайте класс Zate, который будет представлять собой дату. Пусть конструктор этого класса параметрами принимает год, месяц и день даты.
 
-Сделайте класс Zate, который будет представлять собой дату. Пусть конструктор этого класса параметрами принимает год, месяц и день даты.
+2. Сделайте метод, который вернет год.
 
-2. jsOpPrZt
+3. Сделайте метод, который вернет номер месяца.
 
-Сделайте метод, который вернет год.
+4. Сделайте метод, который вернет день месяца.
 
-3. jsOpPrZt
+5. Сделайте метод, который вернет номер дня недели.
 
-Сделайте метод, который вернет номер месяца.
+6. Сделайте метод, который вернет название дня недели.
 
-4. jsOpPrZt
-
-Сделайте метод, который вернет день месяца.
-
-5. jsOpPrZt
-
-Сделайте метод, который вернет номер дня недели.
-
-6. jsOpPrZt
-
-Сделайте метод, который вернет название дня недели.
-
-7. jsOpPrZt
-
-Сделайте метод, который вернет название месяца.
+7. Сделайте метод, который вернет название месяца.
 
 
