--- a/58.md
+++ b/58.md
@@ -1,36 +1,19 @@
-
-jsOpPrZtE58 of 60menu
-
 Класс ZateExt в ООП в Python
 
 ## Задание
 
-1. jsOpPrZtE
+1. Сделайте класс ZateExt, который будет наследовать от класса Zate из предыдущего урока и расширять его некоторыми методами.
 
-Сделайте класс ZateExt, который будет наследовать от класса Zate из предыдущего урока и расширять его некоторыми методами.
+2. Сделайте метод, который будет прибавлять к дате заданное количество лет.
 
-2. jsOpPrZtE
+3. Сделайте метод, который будет отнимать от даты заданное количество лет.
 
-Сделайте метод, который будет прибавлять к дате заданное количество лет.
+4. Сделайте метод, который будет прибавлять к дате заданное количество месяцев.
 
-3. jsOpPrZtE
+5. Сделайте метод, который будет отнимать от даты заданное количество месяцев.
 
-Сделайте метод, который будет отнимать от даты заданное количество лет.
+6. Сделайте метод, который будет прибавлять к дате заданное количество дней.
 
-4. jsOpPrZtE
-
-Сделайте метод, который будет прибавлять к дате заданное количество месяцев.
-
-5. jsOpPrZtE
-
-Сделайте метод, который будет отнимать от даты заданное количество месяцев.
-
-6. jsOpPrZtE
-
-Сделайте метод, который будет прибавлять к дате заданное количество дней.
-
-7. jsOpPrZtE
-
-Сделайте метод, который будет отнимать от даты заданное количество дней.
+7. Сделайте метод, который будет отнимать от даты заданное количество дней.
 
 
