--- a/59.md
+++ b/59.md
@@ -1,32 +1,17 @@
-
-jsOpPrMn59 of 60menu
-
 Класс Month в ООП в Python
 
 ## Задание
 
-1. jsOpPrMn
+1. Сделайте класс Month, который будет представлять собой месяц. Пусть конструктор этого класса параметром принимает номер месяца.
 
-Сделайте класс Month, который будет представлять собой месяц. Пусть конструктор этого класса параметром принимает номер месяца.
+2. Сделайте метод, который вернет номер месяца.
 
-2. jsOpPrMn
+3. Сделайте метод, который вернет название месяца.
 
-Сделайте метод, который вернет номер месяца.
+4. Сделайте метод, который вернет номер последнего дня месяца.
 
-3. jsOpPrMn
+5. Сделайте метод, который вернет номер дня недели первого дня месяца.
 
-Сделайте метод, который вернет название месяца.
-
-4. jsOpPrMn
-
-Сделайте метод, который вернет номер последнего дня месяца.
-
-5. jsOpPrMn
-
-Сделайте метод, который вернет номер дня недели первого дня месяца.
-
-6. jsOpPrMn
-
-Сделайте метод, который вернет номер дня недели последнего дня месяца.
+6. Сделайте метод, который вернет номер дня недели последнего дня месяца.
 
 
