--- a/60.md
+++ b/60.md
@@ -1,39 +1,40 @@
-
-jsOpPrSt60 of 60menu
-
 Класс Store в ООП в Python
 
 Давайте реализуем класс Store, который будет представлять собой оболочку над локальным хранилищем и позволит легко сохранять и изменят в нем хранящиеся структуры данных.
 
 Давайте посмотрим, как мы будем работать с описанным классом. Для начала создадим его объект:
- store = Store 
+```py
+store = Store 
+```
 
 Теперь сохраним данные с заданным ключом:
+```py
 store.set('key',:a: 1, b: 2, c: 3) 
+```
 
 Получим эти данные по ключу:
- res = store.get('key') 
+```py
+res = store.get('key') 
 print(res)  #:a: 1, b: 2, c: 3
+```
 
 Получим часть сохраненной структуры, указав несколько ключей через точку:
- res = store.get('key.a') 
+```py
+res = store.get('key.a') 
 print(res)  # 1
+```
 
 Получим другую часть по сложному ключу:
- res = store.get('key.b') 
+```py
+res = store.get('key.b') 
 print(res)  # 2
+```
 
 ## Задание
 
-1. jsOpPrSt
+1. Реализуйте описанный класс.
 
-Реализуйте описанный класс.
+2. Сделайте метод, который будет изменять данные по заданному ключу.
 
-2. jsOpPrSt
-
-Сделайте метод, который будет изменять данные по заданному ключу.
-
-3. jsOpPrSt
-
-Сделайте метод, который будет удалять данные по заданному ключу.
+3. Сделайте метод, который будет удалять данные по заданному ключу.
 
