--- a/39.md
+++ b/39.md
@@ -1,54 +1,45 @@
-
-jsOpIhHr39 of 60menu
-
-Иерархия наследования классов в ООП в Python
+# Иерархия наследования классов в ООП в Python
 
 Можно выполнять наследования от класса, который сам является потомком. Давайте посмотрим на примере. Пусть у нас есть следующий класс-родитель:
+```py
 class User:
-	setName(self,name):
+	def setName(self,name):
 		self._name = name 
 	
-	getName(self):
+	def getName(self):
 		return self._name 
-	
+```	
 
 
 От этого класса наследует следующий класс:
-class Student(User:
-	setYear(year):
+```py
+class Student(User):
+	def setYear(self, year):
 		self._year = year 
 	
-	getYear(self):
+	def getYear(self):
 		return self._year 
-	
+```	
 
 
 А от этого класса наследует еще один класс:
-class StudentProgrammer(Student:
-	setSkill(skill):
+```py
+class StudentProgrammer(Student):
+	def setSkill(self, skill):
 		self._skill = skill 
 	
-	getSkill(self):
+	def getSkill(self):
 		return self._skill 
-	
-
+```	
 
 ## Задание
 
-1. jsOpIhHr
+1. Сделайте класс Employee, который будет наследовать от класса User.
 
-Сделайте класс Employee, который будет наследовать от класса User.
+2. Сделайте класс Programmer, который будет наследовать от класса Employee.
 
-2. jsOpIhHr
+3. Сделайте классы Designer, который будет наследовать от класса Employee.
 
-Сделайте класс Programmer, который будет наследовать от класса Employee.
-
-3. jsOpIhHr
-
-Сделайте классы Designer, который будет наследовать от класса Employee.
-
-4. jsOpIhHr
-
-Добавьте в созданные вами классы различные методы.
+4. Добавьте в созданные вами классы различные методы.
 
 
