--- a/53.md
+++ b/53.md
@@ -1,24 +1,13 @@
-
-jsOpPrCr53 of 60menu
-
 Класс Circle в ООП в Python
 
 ## Задание
 
-1. jsOpPrCr
+1. Сделайте класс Circle, который будет описывать круг.
 
-Сделайте класс Circle, который будет описывать круг.
+2. Передайте в параметр конструктора радиус круга. Запишите его в приватное свойство.
 
-2. jsOpPrCr
+3. Сделайте метод, который будет возвращать площадь круга.
 
-Передайте в параметр конструктора радиус круга. Запишите его в приватное свойство.
-
-3. jsOpPrCr
-
-Сделайте метод, который будет возвращать площадь круга.
-
-4. jsOpPrCr
-
-Сделайте метод, который будет возвращать длину окружности.
+4. Сделайте метод, который будет возвращать длину окружности.
 
 
