--- a/54.md
+++ b/54.md
@@ -1,24 +1,13 @@
-
-jsOpPrRc54 of 60menu
-
 Класс Rectangle в ООП в Python
 
 ## Задание
 
-1. jsOpPrRc
+1. Сделайте класс Rectangle, в котором в свойствах будут записаны ширина и высота прямоугольника.
 
-Сделайте класс Rectangle, в котором в свойствах будут записаны ширина и высота прямоугольника.
+2. В классе Rectangle сделайте метод getSquare, который будет возвращать площадь этого прямоугольника.
 
-2. jsOpPrRc
+3. В классе Rectangle сделайте метод getPerimeter, который будет возвращать периметр этого прямоугольника.
 
-В классе Rectangle сделайте метод getSquare, который будет возвращать площадь этого прямоугольника.
-
-3. jsOpPrRc
-
-В классе Rectangle сделайте метод getPerimeter, который будет возвращать периметр этого прямоугольника.
-
-4. jsOpPrRc
-
-В классе Rectangle сделайте метод getRatio, который будет возращать площадь, деленную на периметр.
+4. В классе Rectangle сделайте метод getRatio, который будет возращать площадь, деленную на периметр.
 
 
