--- a/1.md
+++ b/1.md
@@ -45,15 +45,15 @@ class Car:
  color = None # цвет автомобиля
  fuel = None #количество топлива
 
- def go():
+ def go(self):
   # Команда ехать:
   pass
 	
- def turn():
+ def turn(self):
   # Команда поворачивать:
   pass
 
- def stop():
+ def stop(self):
  # Команда остановиться:
   pass
 ```
