--- a/6.md
+++ b/6.md
@@ -3,7 +3,7 @@
 Методы могут принимать параметры. Давайте для примера передадим в наш метод два параметра:
 ```py
 class User:
-	def show(name, surname):
+	def show(self,name, surname):
 		return name + ' ' + surname 
 ```
 
