--- a/13.md
+++ b/13.md
@@ -1,6 +1,6 @@
 # Приватные свойства в ООП в Python
 
-Свойства объекта, которые можно прочитывать и записывать извне, называются публичными. 
+Свойства объекта, которые можно прочитывать и записывать извне, называются публичными.
 
 Существуют также приватные свойства, которые будут доступны только внутри класса.
 
@@ -18,7 +18,7 @@ class User:
   __name = None
 
    def __init__(self,name,surname):
-    self.__name = name 
+    self.__name = name
 ```
 
 Сделаем теперь метод, который будет возвращать значение нашего свойства:
@@ -28,25 +28,28 @@ class User:
   __name = None
 
   def __init__(self,name):
-    self.__name = name 
+    self.__name = name
 
-  def show():
+  def show(self):
     return self.__name
 ```
 
 Создадим объект класса, передав параметром имя юзера:
 
 ```py
-user = User('john') 
+user = User('john')
 ```
 
 Попытка обратиться напрямую к нашему свойству вне класса приведет к ошибке:
+
 ```py
 print(user.__name)
 ```
-> AttributeError: 'User' object has no attribute '__name'
+
+> AttributeError: 'User' object has no attribute '\_\_name'
 
 А вызов нашего метода позволит прочитать это свойство:
+
 ```py
 print(user.show())  # выведет 'john'
 ```
