--- a/14.md
+++ b/14.md
@@ -9,9 +9,9 @@ class User:
   __name = None
 
   def __init__(self,name):
-    self.__name = name 
+    self.__name = name
 
-  def show():
+  def show(self):
     return self.__name
 ```
 
@@ -22,9 +22,9 @@ class User:
   __name = None
 
   def __init__(self,name):
-    self.__name = name 
+    self.__name = name
 
-  def show():
+  def show(self):
     return self.__name
 
   def __cape(self,stri):
@@ -38,9 +38,9 @@ class User:
   __name = None
 
   def __init__(self,name):
-    self.__name = name 
+    self.__name = name
 
-  def show():
+  def show(self):
     self.__cape(self.__name)
 
 
@@ -49,10 +49,10 @@ class User:
 ```
 
 Давайте проверим. Создадим объект нашего класса:
-user = User('john') 
+user = User('john')
 
 Вызовем публичный метод, использующий вспомогательный:
-print(user.show()) 
+print(user.show())
 
 ## Задание
 
@@ -61,13 +61,13 @@ print(user.show())
 ```py
 class Employee:
   def __init__(self,name, salary):
-    self.name = name 
-    self.salary = salary 
+    self.name = name
+    self.salary = salary
 
- 	def getSalary():
-		return self.addSign(self.salary) 
-	
-	
-	def addSign(num):
-		return num + '$' 
+ 	def getSalary(self):
+		return self.addSign(self.salary)
+
+
+	def addSign(self,num):
+		return num + '$'
 ```
