--- a/32.md
+++ b/32.md
@@ -1,24 +1,25 @@
-
 # Вызов переопределенного метода в ООП в Python
 
 При переопределении потомок теряет доступ к переопределенному методу родителю. Однако, получить к нему доступ все равно можно. Это делается с помощью ключевого слова super, которое указывает на родительский класс.
 
 Давайте посмотрим на примере, когда нам может понадобится доступ к родительскому методу. Пусть у нас есть следующий класс-родитель:
+
 ```py
 class User:
 	def setName(self,name):
-		self.name = name 
-	
+		self.name = name
+
 	def getName(self):
-		return self.name 
+		return self.name
 ```
 
 Пусть мы в классе-потомке переопределили метод родителя:
+
 ```py
 class Student(User):
 	def setName(self,name):
 		if (len(name) > 0):
-			self.name = name 
+			self.name = name
 		 else:
       raise Exception("student name error")
 ```
@@ -26,36 +27,37 @@ class Student(User):
 Можно заметить, что в переопределенном методе при выполнения условия фактически выполняется код родительского метода. Получается не нужное дублирование кода.
 
 Можно от него избавиться, если вызвать метод родителя. Давайте сделаем это:
+
 ```py
 class Student(User):
-	setName(self,name):
+	def setName(self,name):
 		if (len(name) > 0):
 			super.setName(name)  # метод родителя
 		 else:
-			raise Exception('student name error') 
+			raise Exception('student name error')
 ```
 
 ## Задание
 
 1. Дан следующий код:
+
 ```py
 class User:
 	def setAge(self,age):
 		if (age >= 0):
-			self.age = age 
+			self.age = age
 		 else:
-			raise Exception('need age more 0') 
+			raise Exception('need age more 0')
 
 class Employee:
 	def setAge(age):
 		if (age <= 120):
 			if (age >= 0):
-				self.age = age 
+				self.age = age
 			 else:
-				raise Exception('need age more 0') 
+				raise Exception('need age more 0')
 		 else:
-			raise Exception('need age less 120') 
+			raise Exception('need age less 120')
 ```
+
 В классе Employee исправьте упростите сеттер возраста, использовав оригинальный метод родителя.
-
-
