--- a/1.md
+++ b/1.md
@@ -65,7 +65,7 @@ class Car:
 Пусть эта переменная будет называться myCar - запишем в нее созданный нами объект:
 
 ```py
-mycar = Car()
+myCar = Car()
 ```
 
 После создания автомобиля можно обращаться к его свойствам. Обращение к ним происходит через точку. Давайте установим свойства нашего объекта:
