--- a/21.md
+++ b/21.md
@@ -1,48 +1,52 @@
-# Оператор instanceof в ООП в Python
+# Оператор isinstance в ООП в Python
 
-Оператор instanceof позволяет проверить принадлежит ли объект определенному классу. Давайте посмотрим на примере. Пусть у нас есть следующий класс:
+Оператор isinstance позволяет проверить принадлежит ли объект определенному классу. Давайте посмотрим на примере. Пусть у нас есть следующий класс:
+
 ```py
 class User:
 	pass
 ```
 
 Сделаем объект в этого класса:
-```py
-user = User
+
+````py
+user = User()
 
 Проверим, принадлежит ли объект из переменной нашему классу:
 ```py
-print(user instanceof User)  # true
-```
+print(isinstance(user,User))  # true
+````
 
 ## Задание
 
 1. Определите, каким будет результат выполнения следующего кода:
+
 ```py
 class Student:
   pass
-	
+
 class Employee:
   pass
-	
-employee = Employee 
-print(employee instanceof Employee) 
-print(employee instanceof Student) 
+
+employee = Employee()
+print(isinstance(employee, Employee))
+print(isinstance(employee,Student))
 ```
 
 2.Дан следующий код:
+
 ```py
 class Student:
   name = None
 
   def __init__(self,name):
-    self.name = name 
+    self.name = name
 
 class Employee:
   name = None
 
   def __init__(self,name):
-    self.name = name 
+    self.name = name
 
 
 users = [
@@ -53,7 +57,7 @@ users = [
 	 Student('user5'),
 	 Employee('user6'),
 	 Student('user7'),
-] 
+]
 ```
 
-Переберите циклом массив объектов и выведите в консоль только имена работников. 
+Переберите циклом массив объектов и выведите в консоль только имена работников.
