--- a/17.md
+++ b/17.md
@@ -27,7 +27,7 @@ class User:
 
 Давайте проверим работу геттеров и сеттеров. Создадим объект нашего класса:
 ```py
-user = User 
+user = User("","")
 ```
 
 С помощью сеттеров установим значения свойств:
