--- a/37.md
+++ b/37.md
@@ -25,12 +25,10 @@ class Student(User):
 	
 	def getSurn(self):
 		return self._capeFirst(self.surname) 
-
+```
 ## Задание
 
-1. jsOpIhPtM
-
-В следующем коде сделайте вспомогательный метод защищенным:
+1. В следующем коде сделайте вспомогательный метод защищенным:
 ```py
 class User:
 	def setName(self,name):
